--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
-server.port = 3000
-
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url = jdbc:mysql://localhost:3306/CloudGraze
+spring.datasource.url = jdbc:mysql://monorail.proxy.rlwy.net:20166/cloudGraze
 spring.datasource.username = root
-spring.datasource.password = log2017g
+spring.datasource.password =ba-eEcA-15BCEea464356C1h42BA-fBH
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
