--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto = update
-spring.datasource.url = jdbc:mysql://monorail.proxy.rlwy.net:38626/cloudGraze
+spring.datasource.url = jdbc:mysql://roundhouse.proxy.rlwy.net:51716/CloudGraze
 spring.datasource.username = root
-spring.datasource.password =e1Ehaag4f1eeDgeHc66AheGaDE1Gce3h
+spring.datasource.password = -26f56a3F1d25EHcCEAga4ba-6Hf2gdD
 spring.datasource.driver-class-name = com.mysql.jdbc.Driver
 spring.jpa.show-sql: true
